<package format="2">
  <name>top_down_projection</name>
  <version>1.0.0</version>
  <description>Convert lidar sequence to a png.</description>
  <maintainer email="s.worrall@acfr.usyd.edu.au">Stewart Worrall</maintainer>
  <author>Stewart Worrall</author>
  <license>BSD</license>
  <url type="website">http://acfr</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>libpcl-all</depend>
  <depend>pcl_ros</depend>
  <depend>h264_bag_playback</depend>
  <depend>roscpp</depend>
  <depend>dataset_tools</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>opencv</depend>
  <depend>custom_point_types</depend>
  <depend>tf_conversions</depend>
  <depend>lane_points_msg</depend>
</package>


